docs: utilize swaggo comment to show create todo body
